fix: Align P1 and P2 sides in overlay CSS
- Adjust #p2Wrapper from 1216px to 1220px
- Adjust #p2Score from 1585px to 1580px
- Adjust #rightBGWrapper from 1205px to 1200px
- Achieved 12px symmetric score-to-name gap on both sides
- BGWrappers now equidistant from edges (290px)

--- a/_overlays/css/style.scss
+++ b/_overlays/css/style.scss
@@ -47,7 +47,7 @@ body {
   }
 
   #p2Wrapper {
-    left: 1216px;
+    left: 1220px;
   }
 
   .scores {
@@ -67,7 +67,7 @@ body {
   }
 
   #p2Score {
-    left: 1585px;
+    left: 1580px;
   }
 
   #round {
@@ -124,7 +124,7 @@ body {
   }
 
   #rightBGWrapper {
-    left: 1205px;
+    left: 1200px;
   }
 
   .playerBG {
